CHATS_SIT/force-app/main/default/objects/sfsit_t_adjmt_detail_hist__x.object
<CustomObject>
    <description>sfsit$t_adjmt_detail_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_adjmt_detail_hist</externalName>
    <fields>
        <fullName>amt_detail_adjmt__c</fullName>
        <description>amt_detail_adjmt</description>
        <externalDeveloperName>amt_detail_adjmt</externalDeveloperName>
        <label>Adjusted Detail Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_paid_rate_adjd__c</fullName>
        <description>amt_paid_rate_adjd</description>
        <externalDeveloperName>amt_paid_rate_adjd</externalDeveloperName>
        <label>Adjusted Rate Paid</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_paid_rate_orig__c</fullName>
        <description>amt_paid_rate_orig</description>
        <externalDeveloperName>amt_paid_rate_orig</externalDeveloperName>
        <label>Amount Paid</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_status_detail_adjmt__c</fullName>
        <description>cde_status_detail_adjmt</description>
        <externalDeveloperName>cde_status_detail_adjmt</externalDeveloperName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_rate_adjd__c</fullName>
        <description>cde_type_rate_adjd</description>
        <externalDeveloperName>cde_type_rate_adjd</externalDeveloperName>
        <label>Adjusted Rate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_care__c</fullName>
        <description>dte_care</description>
        <externalDeveloperName>dte_care</externalDeveloperName>
        <label>Care Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last modified date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_adjmt__c</fullName>
        <description>idn_adjmt</description>
        <externalDeveloperName>idn_adjmt</externalDeveloperName>
        <label>Adjustment ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
   <fields>
        <fullName>idn_detail_adjmt__c</fullName>
        <description>idn_detail_adjmt</description>
        <externalDeveloperName>idn_detail_adjmt</externalDeveloperName>
        <label>Adjustment Detail ID</label>
        <length>50</length>
        <referenceTargetField>T_ADJMT_DETAIL__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_ADJMT_DETAIL__c</referenceTo>
        <relationshipLabel>Adjustment Detail Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_adjmt_detail_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_detail_adjmt_hist__c</fullName>
        <description>idn_detail_adjmt_hist</description>
        <externalDeveloperName>idn_detail_adjmt_hist</externalDeveloperName>
        <label>Adjustment Detail Hist ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_detail_pmt_sub__c</fullName>
        <description>idn_detail_pmt_sub</description>
        <externalDeveloperName>idn_detail_pmt_sub</externalDeveloperName>
        <label>Sub Payment Detail</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_prog_fndg__c</fullName>
        <description>idn_prog_fndg</description>
        <externalDeveloperName>idn_prog_fndg</externalDeveloperName>
        <label>Funding Program</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_adjmt_detail_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_hours_atndt_orig__c</fullName>
        <description>nbr_hours_atndt_orig</description>
        <externalDeveloperName>nbr_hours_atndt_orig</externalDeveloperName>
        <label>Attended Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_hours_attnd_adjd__c</fullName>
        <description>nbr_hours_attnd_adjd</description>
        <externalDeveloperName>nbr_hours_attnd_adjd</externalDeveloperName>
        <label>Adjusted Attended Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_hours_auth_adjd__c</fullName>
        <description>nbr_hours_auth_adjd</description>
        <externalDeveloperName>nbr_hours_auth_adjd</externalDeveloperName>
        <label>Adjusted Authorized Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_hours_auth_orig__c</fullName>
        <description>nbr_hours_auth_orig</description>
        <externalDeveloperName>nbr_hours_auth_orig</externalDeveloperName>
        <label>Authorized Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Adjustment Detail History</label>
    <pluralLabel>Adjustment Detail History</pluralLabel>
</CustomObject>